[package]
name = "wad-render"
version = "0.1.0"
authors = ["Magnus Hovland Hoff <maghoff@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wee_alloc = "0.4.4"
wad = { git = "https://github.com/maghoff/wad.git" }
wad-gfx = { git = "https://github.com/maghoff/wad-gfx.git" }
wad-map = { git = "https://github.com/maghoff/wad-map.git" }
ndarray = "0.12.1"
cgmath = "0.17.0"
array-macro = "1.0.4"

[patch.crates-io]
wad = { git = "https://github.com/maghoff/wad.git" }
